# desktop-companion

./: Cargo.toml  README.md
config/: config.toml
config/niko/: companion.toml
src/: behavior.rs  companion.rs  core.rs  errors.rs  main.rs
src/animation/: fall.rs  idle.rs  mod.rs  movement.rs
