[package]
name = "desktop-companion"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.45", features = ["derive"] }
config = "0.15.14"
fern = { version = "0.7.1", features = ["colored", "chrono"] }
ggez = "0.9.3"
humantime = "2.2.0"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
